# spider_robot

./: .gitignore  README.md
docs/: BOM.md  CLIMBING-DESIGN.md  LEG-GEOMETRY-OPEN.md  P0-GUIDE.md  P1-GUIDE.md  P2-GUIDE.md  P3-GUIDE.md  ROADMAP.md  weight-log.md
docs/data/: p2_1_5_kg_hold300s.csv  p2_50cycles.csv
hardware/climbing-parts/: carriage-pedestal.stl  component_plate.stl  coxa-pedestal.stl  left-tibia-suction-exp.stl  left-tibia-suction.stl  suction-foot-door-exp.stl  suction-foot-door.stl  suction_foot.stl
html/: coxa-pedestal-mount.html  fkp-glass-poses.html  p2-rig-diagram.html  p4-divider-board.html  p4-pi-wiring.html  p4-system-diagram.html  theta-measure-diagram.html
software/: README.md  pyproject.toml  test_adhesion_real.py  test_leak_rate.py  test_weight.py
software/hexapod/: __init__.py  adhesion.py  config.py  driver.py  gait.py  kinematics.py  robot.py
software/scripts/: interactive_swing.py  servo_calib_helper.py  servo_center.py  sim_walk.py  single_leg_wall.py  stand_up.py  walk_teleop.py
software/tests/: test_adhesion.py  test_driver.py  test_gait.py  test_kinematics.py
tools/: generate_climbing_parts.py  workspace_analysis.py
